# botato

./: .gitignore  404.html  README.md  blog.html  index.html  markdown-page.html  pyproject.toml  sitemap.xml
assets/js/: 0e384e19.c6a3f913.js  137fc471.63d6a5ca.js  18c41134.90c85373.js  1a15d0ac.fe8320a4.js  1e4232ab.0b0dc3ad.js  31a7ead7.092ca101.js  393be207.e144a432.js  4d7a68e8.b64e7879.js  533a09ca.eb50af9b.js  59362658.12f3e7f8.js  5c868d36.ad2e6524.js  5d65f297.8c58cff3.js  73664a40.5cbd6bdc.js  7661071f.4756705f.js  7e4359dd.ae489292.js  814f3328.71cf9a0e.js  822bd8ab.20d21c9c.js  8717b14a.5eaadfc9.js  925b3f96.7b09121f.js  94bbc887.280a62f2.js  a0171e2a.5a95adfa.js  acecf23e.e8b3f01f.js  b05ae648.95299afe.js  bc3ccf82.f9929ae3.js  d9f32620.f43649d8.js  dff1c289.561b1986.js  e273c56f.12e93ab4.js  e44a2883.f065f824.js  eb24bcd7.8730b7ee.js  ebd48614.370dc2ba.js  f3fbe0cd.374c3fa5.js  f4f34a3a.868b49cb.js  f55d3e7a.acf1cd88.js  main.388b281c.js  main.ad2a90c9.js  runtime~main.6a13ecd2.js
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  index.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
blog/archive/: index.html
blog/authors/: all-sebastien-lorber-articles.html  index.html  yangshun.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: docusaurus.html  facebook.html  hello.html  hola.html  (+1 more)
botato/: client.py  intents.py
docs/: docusaurus.config.ts  intro.html  package-lock.json
examples/: basic_bot.py
markdown-page/: index.html
(+45 files in other folders)
